Fix spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,3 +74,11 @@ input {
   line-height: 20px;
   font-size: 12px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  #infoWrapper {
+    margin-top: 100px;
+  }
+
+}
